# poc-api-spec-rag

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
data/specs/: sample-api.yaml
docs/: PLAN.md  REAL_API_TESTS.md
src/: __init__.py  main.py
src/core/: __init__.py  config.py  exceptions.py  models.py
src/generation/: __init__.py  llm_client.py  parser.py  prompt_builder.py
src/ingestion/: __init__.py  chunker.py  embedder.py  indexer.py  parser.py
src/retrieval/: __init__.py  query_processor.py  reranker.py  vector_search.py
src/validation/: __init__.py  confidence_scorer.py  curl_validator.py  spec_validator.py
tests/: __init__.py  test_main.py
